--- a/Personal/Home/templates/about_me.html
+++ b/Personal/Home/templates/about_me.html
@@ -38,96 +38,57 @@
                 <h5 class="target_header">Personally Acquired Experience</h5>
                 <hr class="target_hr about_me_hr">
                 <br>
-
-                <center><p><strong>Front-End</strong></center>
-                <hr style="border-color: black; width: 75px; margin-top: -7.5px; margin-bottom: 1.5em;" />
+                <div class="about_me_languages_outer_div">
+                    <div class="about_me_languages_inner_div_icon">
+                        <img src="{% static 'languages_icons/HTML_Icon.png' %}" alt="HTML Icon"></img>
+                    </div>
+                    <div class="about_me_languages_inner_div_text">
+                        <p>HTML</p>
+                        </div>
+                </div>
 
                 <div class="about_me_languages_outer_div">
                     <div class="about_me_languages_inner_div_icon">
-                        <img class="marq" src="{% static 'languages_icons/HTML_Icon.png' %}" alt="HTML Icon"></img>
-                        <caption>HTML</caption>
+                        <img src="{% static 'languages_icons/CSS_Icon.png' %}" alt="CSS Icon"></img>
                     </div>
                     <div class="about_me_languages_inner_div_text">
-                        <p>The power duo. While I feel very confident in my ability to convert a thought into a rendered product on a web page, I am constantly learning new tricks to improve my CSS. Having no background in 
-                        graphical design, I sometimes struggle in imagining what is actually possible and transposing that into code. With enough time, I will domineer the languages.
-
+                        <p>CSS{% comment %}  {% endcomment %}</p>
                     </div>
                 </div>
 
                 <div class="about_me_languages_outer_div">
                     <div class="about_me_languages_inner_div_icon">
-                        <img class="marq" src="{% static 'languages_icons/CSS_Icon.png' %}" alt="CSS Icon"></img>
-                        <caption>CSS</caption>
+                        <img src="{% static 'languages_icons/Javascript_Icon.png' %}" alt="Javascript Icon"></img>
                     </div>
                     <div class="about_me_languages_inner_div_text">
-                        <p>The power duo. While I feel very confident in my ability to convert a thought into a rendered product on a web page, I am constantly learning new tricks to improve my CSS. Having no background in 
-                        graphical design, I sometimes struggle in imagining what is actually possible and transposing that into code. With enough time, I will domineer the languages.
-
+                        <p>Javascript</p>
                     </div>
                 </div>
 
                 <div class="about_me_languages_outer_div">
                     <div class="about_me_languages_inner_div_icon">
-                        <img class="marq" src="{% static 'languages_icons/Javascript_Icon.png' %}" alt="Javascript Icon"></img>
-                        <caption>JavaScript</caption>
+                        <img src="{% static 'languages_icons/Python_Icon.png' %}" alt="Python Icon"></img>
                     </div>
                     <div class="about_me_languages_inner_div_text">
-                        <p>The power duo. While I feel very confident in my ability to convert a thought into a rendered product on a web page, I am constantly learning new tricks to improve my CSS. Having no background in 
-                        graphical design, I sometimes struggle in imagining what is actually possible and transposing that into code. With enough time, I will domineer the languages.
-
-                    </div>
-                </div>
-
-
-                <center><p><strong>Back-End</strong></center>
-                <hr style="border-color: black; width: 75px; margin-top: -7.5px; margin-bottom: 1.5em;" />
-
-
-                <div class="about_me_languages_outer_div">
-                    <div class="about_me_languages_inner_div_icon">
-                        <img class="marq" src="{% static 'languages_icons/Python_Icon.png' %}" alt="Python Icon"></img>
-                        <caption>Python</caption>
-                    </div>
-                    <div class="about_me_languages_inner_div_text">
-                        <p>The power duo. While I feel very confident in my ability to convert a thought into a rendered product on a web page, I am constantly learning new tricks to improve my CSS. Having no background in 
-                        graphical design, I sometimes struggle in imagining what is actually possible and transposing that into code. With enough time, I will domineer the languages.
-
+                        <p>Python</p>
                     </div>
                 </div>
 
                 <div class="about_me_languages_outer_div">
                     <div class="about_me_languages_inner_div_icon">
-                        <img class="marq" src="{% static 'languages_icons/NodeJS_Icon.png' %}" alt="Node JS Icon"></img>
-                        <caption>NodeJS</caption>
+                        <img src="{% static 'languages_icons/NodeJS_Icon.png' %}" alt="Node JS Icon"></img>
                     </div>
                     <div class="about_me_languages_inner_div_text">
-                        <p>The power duo. While I feel very confident in my ability to convert a thought into a rendered product on a web page, I am constantly learning new tricks to improve my CSS. Having no background in 
-                        graphical design, I sometimes struggle in imagining what is actually possible and transposing that into code. With enough time, I will domineer the languages.
-
+                        <p>Node.JS</p> 
                     </div>
                 </div>
 
                 <div class="about_me_languages_outer_div">
                     <div class="about_me_languages_inner_div_icon">
-                        <img class="marq" src="{% static 'languages_icons/VBS_Icon.png' %}" alt="VBS Icon"></img>
-                        <caption>VBScript</caption>
+                        <img src="{% static 'languages_icons/SQL.png' %}" alt="SQL Icon"></img>
                     </div>
                     <div class="about_me_languages_inner_div_text">
-                        <p>The power duo. While I feel very confident in my ability to convert a thought into a rendered product on a web page, I am constantly learning new tricks to improve my CSS. Having no background in 
-                        graphical design, I sometimes struggle in imagining what is actually possible and transposing that into code. With enough time, I will domineer the languages.
-
-                    </div>
-                </div>
-
-                <div class="about_me_languages_outer_div">
-                    <div class="about_me_languages_inner_div_icon">
-                        <img class="marq" src="{% static 'languages_icons/VBA_Icon.png' %}" alt="VBA Icon"></img>
-                        <caption>VBA</caption>
-                    </div>
-                    <div class="about_me_languages_inner_div_text">
-                        <p>The power duo. While I feel very confident in my ability to convert a thought into a rendered product on a web page, I am constantly learning new tricks to improve my CSS. Having no background in 
-                        graphical design, I sometimes struggle in imagining what is actually possible and transposing that into code. With enough time, I will domineer the languages.
-
+                        <p>SQL</p>
                     </div>
                 </div>
 
@@ -141,15 +102,46 @@
                 <hr class="target_hr about_me_hr">
                 <br>
 
+                <div class="about_me_languages_outer_div">
+                    <div class="about_me_languages_inner_div_icon">
+                        <img src="{% static 'languages_icons/MainFrame.png' %}" alt="Mainframe Icon"></img>
+                    </div>
+                    <div class="about_me_languages_inner_div_text">
+                        <p>Mainframe Architecture</p>
+                    </div>
+                </div>
+
+                <div class="about_me_languages_outer_div">
+                    <div class="about_me_languages_inner_div_icon">
+                        <img src="{% static 'languages_icons/VBS_Icon.png' %}" alt="VBS Icon"></img>
+                    </div>
+                    <div class="about_me_languages_inner_div_text">
+                        <p>VBScript</p>
+                    </div>
+                </div>
+
+                <div class="about_me_languages_outer_div">
+                    <div class="about_me_languages_inner_div_icon">
+                        <img src="{% static 'languages_icons/VBA_Icon.png' %}" alt="VBA Icon"></img>
+                    </div>
+                    <div class="about_me_languages_inner_div_text">
+                        <p>VBA</p>
+                    </div>
+                </div>
+
+                <div class="about_me_languages_outer_div">
+                    <div class="about_me_languages_inner_div_icon">
+                        <img src="{% static 'languages_icons/Microsoft_Suite.png' %}" alt="Microsoft Suite Icon"></img>
+                    </div>
+                    <div class="about_me_languages_inner_div_text">
+                        <p>Microsoft Office Suite</p>
+                    </div>
+                </div>
+
+
                 <p> Since my hire in February of 2015 (<i>{{ elapsed_time }}</i>), I have worked very intimately with our Enterprise Resource Planning systems here at Fiat Chrysler 
-                Automobiles. Being an employee in the Logistics department, we work within an IBM-developed operating system (z/OS) using a zSeries terminal emulator (TN3270) across telnet 
-                protocol. We use this IBM mainframe emulator to access a large data reservoir somewhere within the company. This serves us as the main resource for managing our internal/external 
+                Automobiles. Being an employee in the Logistics department, we work within an IBM-developed operating system (z/OS) using a zSeries terminal emulator (TN3270). We use this IBM mainframe emulator to access a large data reservoir somewhere within the company. This serves us as the main resource for managing our internal/external 
                 inventory/receiving levels and our internal/external delivery systems. 
-                <br>
-                <br>
-                While working with the mainframe has some perks, including the amount of traffic it can handle (apparently ~2.5 billion 
-                transacions per day according to IBM), I believe my future exists working within the client/server architecture. While I admittedly don't know all the differences between the two, 
-                it seems there is a great reserve of inormation surrounding applications built on client/server. 
                 </p>
             </li>
 
