--- a/Personal/Home/templates/connect.html
+++ b/Personal/Home/templates/connect.html
@@ -32,14 +32,14 @@
             <h5 class="target_header">Methods of Communication</h5>
             <hr class="target_hr about_me_hr">
 
-            <span id="connect_by_phone_span"><p id="connect_by_phone_p" class="connect_centered_li"><a href="tel://14192068550" class="connect_functional_links" target="_top">By Phone   <i id="connect_by_phone_i" class="fas fa-mobile-alt"></i></a></p></span>
+            <span class="target_methods_of_comm" id="connect_by_phone_span"><p id="connect_by_phone_p" class="connect_centered_li connect_functional_links"><a href="tel://14192068550" class="connect_functional_links" target="_top">By Phone   <i id="connect_by_phone_i" class="fas fa-mobile-alt"></i></a></p></span>
             <p>
             Like most people, my cell phone has become a sort of extension to my persons. I usally have it with me at all times. My daytime cell number is (419)-206-8550. 
             The only issue with this is that, like most people, I sometimes hesitate answering a number I don't know. (I worked for a call center at one point, I know the tricks of the trade) 
             I have a voicemail service that I use, so if I ever don't pick up, please leave me a voicemail with your information!
             </p>
 
-            <span id="connect_by_mail_span"><p id="connect_by_mail_p" class="connect_centered_li connect_functional_links"><a href="mailto:JLamborghini22@gmail.com?Subject=Hey%20Jarret%2C%20this%20is%20(tell%20me%20your%20name%20here)...&body=Just%20want%20to%20say%20that%20you%20rock!%20(Just%20kidding%20put%20your%20own%20message%20here.)" class="connect_functional_links">By Email   <i id="connect_by_email_i" class="far fa-envelope-open"></i></a></p></span>
+            <span class="target_methods_of_comm" id="connect_by_mail_span"><p id="connect_by_mail_p" class="connect_centered_li connect_functional_links"><a href="mailto:JLamborghini22@gmail.com?Subject=Hey%20Jarret%2C%20this%20is%20(tell%20me%20your%20name%20here)...&body=Just%20want%20to%20say%20that%20you%20rock!%20(Just%20kidding%20put%20your%20own%20message%20here.)" class="connect_functional_links">By Email   <i id="connect_by_email_i" class="far fa-envelope-open"></i></a></p></span>
             <p>
             
             In some cases, I am more apt to responding to an email than a cell phone call. My primary personal email is Jlamborghini22@gmail.com</a>. 
@@ -48,7 +48,7 @@
             <br>
             </p>
 
-            <span id="connect_by_contact_form"><p id="connect_by_contact_form_p" class="connect_centered_li connect_functional_links">Contact Form (Below)   <i id="connect_by_contact_form_i" class="far fa-file-alt"></i></p></span>
+            <span class="target_methods_of_comm" id="connect_by_contact_form"><p id="connect_by_contact_form_p" class="connect_centered_li connect_functional_links">Contact Form (Below)   <i id="connect_by_contact_form_i" class="far fa-file-alt"></i></p></span>
             
             <p>
             Just a quick form I've created with Django, it basically sends you a receipt of the content, me an auto-generated email with the content and also logs the information in my SQLite database (not that I would ever lose your information). In the form, 
