--- a/Personal/Home/templates/about_me.html
+++ b/Personal/Home/templates/about_me.html
@@ -9,11 +9,9 @@
 
         <div id="about_me_introduction_container">
 
-            <p id="about_me_introduction_p">Hi there.  <span id="about_me_peace_icon"><i class="far fa-hand-peace"></i></span>  My name is Jarret Laberdee. I am currently 29 years old and looking for a change of pace in my career. I've written a little bit about myself. Please take a look!</p>
+            <p id="about_me_introduction_p">Hey there.  <span id="about_me_peace_icon"><i class="far fa-hand-peace"></i></span>  My name is Jarret Laberdee and I love programming.</p>
 
         </div>
-
-        <br>
 
         <ul id="about_me_page_ul">
 
@@ -24,14 +22,10 @@
                 <hr class="target_hr about_me_hr">
                 <br>
                 <p>From a young age, I vividly recall being captivated by gadgetry. Due to my problem-solving nature and interest in how things work, I have always been the "go-to" guy for technologically-related issues (<i>primarily turning the router on and off again for 
-                family members</i>). I enjoy laying out a problem and taking incremental steps towards a solution. 
+                family members</i>). I enjoy laying out a problem and taking incremental steps towards a solution. This is precisely the reason that software design has fit neatly into my bag of tricks.</p>
                 <br>
-                <br>
-                This is precisely the reason why software/web development has fit neatly into my bag of tricks. From the time I received my first N64 as a child to the current moment of me writing this <strong><i>&lt;p&gt;</i></strong> tag as an adult, I have been inquisitive with how smart people have 
-                translated 0's and 1's into the technological goods and services that envelop our lives.</p>
             </li>
 
-            <br>
             <hr class="target_hr about_me_hr">
 
             <li>
@@ -94,6 +88,10 @@
 
                 <br>
 
+                <p>The bulk of my self-learning has come in the form of web-development (as you can tell from the stack I referenced above). This is not to say that software development, in a more general sense, 
+                does not peak my interest. I have simply stayed focus on learning the basics before moving to more advanced architectures.</p>
+
+                <br>
 
             <li>
 
@@ -134,14 +132,22 @@
                         <img src="{% static 'languages_icons/Microsoft_Suite.png' %}" alt="Microsoft Suite Icon"></img>
                     </div>
                     <div class="about_me_languages_inner_div_text">
-                        <p>Microsoft Office Suite</p>
+                        <p>Microsoft Suite</p>
                     </div>
                 </div>
 
+                <div class="about_me_languages_outer_div">
+                    <div class="about_me_languages_inner_div_icon">
+                        <img src="{% static 'languages_icons/Google_Suite.png' %}" alt="Google Suite Icon"></img>
+                    </div>
+                    <div class="about_me_languages_inner_div_text">
+                        <p>Google Suite</p>
+                    </div>
+                </div>
 
-                <p> Since my hire in February of 2015 (<i>{{ elapsed_time }}</i>), I have worked very intimately with our Enterprise Resource Planning systems here at Fiat Chrysler 
-                Automobiles. Being an employee in the Logistics department, we work within an IBM-developed operating system (z/OS) using a zSeries terminal emulator (TN3270). We use this IBM mainframe emulator to access a large data reservoir somewhere within the company. This serves us as the main resource for managing our internal/external 
-                inventory/receiving levels and our internal/external delivery systems. 
+                <br>
+
+                <p> Since my hire in February of 2015 (<i>{{ elapsed_time }} &lt-- *wink wink to rendered variables</i>), I have worked with an ERP system assembled on an IBM mainframe. Accessed by a terminal emulator, we utilize a z/OS operating system written in COBOL and queried through SQL. I have, very inimately, seen the pros and cons of the mainframe architecture.
                 </p>
             </li>
 
@@ -153,13 +159,15 @@
                 <hr class="target_hr about_me_hr">
                 <br>
 
-                <p>For me, the data-driven intertwinement between man and machine transcends more than mere curiousity. For me, it is a responsibility to adapt and evolve in order to stay current. With data being an ever-more 
-                valuable currency in today's day and age, in my opinion there will be left two groups of people: Those whose job it is to automate, 
-                and those whose job's have been automated. I, personally, want to be the one to automate. This ideology has really propelled me towards coding and, more generally, computing. 
+                <p>Much like linguistics, which I heavily invested resources into for a time in my life, programming speaks to me as a way to share ideas with one another. On top of this, I revel in the idea of automating 
+                repetitive tasks and more generally improving people's lives.</p>
 
+                <p>My Goal is to acquire a job which fulfills me both financially and intellectually.</p>
+
+                <br>
             </li>
 
-            <br>
+
             <hr class="target_hr about_me_hr">
 
             <li>
@@ -167,7 +175,7 @@
                 <hr class="target_hr about_me_hr">
                 <br>
 
-                <p>I've attached a copy of my resume below. While it doesn't reflect all of my personal accomplishments as nicely as I'd like, feel free to take a copy with you on your search for the right candidate.</p>
+               <center> <p>Please take a copy of my resume with you on your search for the right candidate.</p></center>
 
             </li>
 
