--- a/Personal/Home/templates/project_home_page.html
+++ b/Personal/Home/templates/project_home_page.html
@@ -3,7 +3,14 @@
 
 {% block project_home_page %}
 
-<div id="project_home_main_div">
+<div class="standard_size" id="project_home_main_div">
+
+    {% comment %} <div class="project_home_section">
+        <p>Take a look at my code:</p>
+
+    </div> {% endcomment %}
+
+    <hr style="width: 90%; background-color: #6e73ab;">
 
     <div class="project_home_section">
         <div class="project_home_project_description_div">
