--- a/Personal/Home/templates/connect.html
+++ b/Personal/Home/templates/connect.html
@@ -15,46 +15,39 @@
         </div>
 
         <div id="connect_page_introductory_text_container" class="standard_size">
-            <p>Hey! So hopefully you've gotten to know me a little from my About Me section. 
-            In any case, I'd love to hear from you!
 
-            <br>
-            <br>
+            <p>Hello there. So if you haven't had the chance, please get to know me a little in my <i><a href="{% url 'about_me' %}">About Me</a></i> section. If you've already done so, 
+            thanks so much for hanging around. What I'd like most is for you to get ahold of me, even if just to chat, drop me your name, or leave some constructive criticism.</p>
+
+            <p>Like a lot of new programmers, I sometimes experience feelings of imposter syndrome. This is precisely why I want to spread my wings into the development community and make as 
+            many friends as possible. I'm hoping you'll be one of them!</p>
             
-            Not being from a software/web development background, I lack (what I consider) the necessary <i>network</i> of people who I can lean on and who can lean on me. This is really the primary goal of 
-            releasing all of my personal information to the world; I would like to extend my web of resources into the professional realm for a better chance for the right 
-            employment.
-            </p>
-
             <br>
 
             <hr class="target_hr about_me_hr">
             <h5 class="target_header">Methods of Communication</h5>
             <hr class="target_hr about_me_hr">
 
+            <br>
+
             <span class="target_methods_of_comm" id="connect_by_phone_span"><p id="connect_by_phone_p" class="connect_centered_li connect_functional_links"><a href="tel://14192068550" class="connect_functional_links" target="_top">By Phone   <i id="connect_by_phone_i" class="fas fa-mobile-alt"></i></a></p></span>
-            <p>
-            Like most people, my cell phone has become a sort of extension to my persons. I usally have it with me at all times. My daytime cell number is (419)-206-8550. 
-            The only issue with this is that, like most people, I sometimes hesitate answering a number I don't know. (I worked for a call center at one point, I know the tricks of the trade) 
-            I have a voicemail service that I use, so if I ever don't pick up, please leave me a voicemail with your information!
-            </p>
+            
+            <p>Like most people, my cell phone has become a sort of extension to my persons. 
+            I usally have it with me at all times. My daytime cell number is (419)-206-8550. 
+            If for any reason I don't pick up, please send me a text or leave me a voicemail.</p>
 
             <span class="target_methods_of_comm" id="connect_by_mail_span"><p id="connect_by_mail_p" class="connect_centered_li connect_functional_links"><a href="mailto:JLamborghini22@gmail.com?Subject=Hey%20Jarret%2C%20this%20is%20(tell%20me%20your%20name%20here)...&body=Just%20want%20to%20say%20that%20you%20rock!%20(Just%20kidding%20put%20your%20own%20message%20here.)" class="connect_functional_links">By Email   <i id="connect_by_email_i" class="far fa-envelope-open"></i></a></p></span>
-            <p>
             
-            In some cases, I am more apt to responding to an email than a cell phone call. My primary personal email is Jlamborghini22@gmail.com</a>. 
-            I am extremely responsive when it comes to emails, so this is an equally ideal method of communication.
+            <p>Another option would be to send me a quick email correspondence. 
+            My primary personal email is Jlamborghini22@gmail.com. 
+            As stated before about the phone, my email is another tool in my kit that is always at my disposal.</p>
 
-            <br>
-            </p>
+            <span class="target_methods_of_comm" id="connect_by_contact_form"><p id="connect_by_contact_form_p" class="connect_centered_li connect_functional_links">By Contact Form   <i id="connect_by_contact_form_i" class="far fa-file-alt"></i></p></span>
+            
+            <p>If you prefer to check the functionality of my website by submitting the form below that is also welcome. 
+            It will email you a receipt of the comment, shoot me a note, and then we can link up that way.</p>
 
-            <span class="target_methods_of_comm" id="connect_by_contact_form"><p id="connect_by_contact_form_p" class="connect_centered_li connect_functional_links">Contact Form (Below)   <i id="connect_by_contact_form_i" class="far fa-file-alt"></i></p></span>
-            
-            <p>
-            Just a quick form I've created with Django, it basically sends you a receipt of the content, me an auto-generated email with the content and also logs the information in my SQLite database (not that I would ever lose your information). In the form, 
-            I didn't request that the sender provide a phone number (I know some people are rustled by giving out that information), so if you choose to leave it in the body of the form, I can acquire it that way. 
-            
-            </p>
+            <p>Please note that all fields are required and both a front-end regex and back-end sanitize function will be passed over the field data prior to submitting.</p>
 
             <br>
 
