view code added

--- a/Personal/Home/templates/project_home_page.html
+++ b/Personal/Home/templates/project_home_page.html
@@ -5,12 +5,14 @@
 
 <div class="standard_size" id="project_home_main_div">
 
-    {% comment %} <div class="project_home_section">
-        <p>Take a look at my code:</p>
+    <div id="view_projects_or_code" class="project_home_section">
+        <div id="view_code">
+            <p>View My Code:<p>  
+            <a href="https://github.com/CarnsJalone" target="_blank"><img src="{% static 'languages_icons/GitHub_Icon.png' %}" alt="GitHub Icon"></a>
+        </div>
+    </div>
 
-    </div> {% endcomment %}
-
-    <hr style="width: 90%; background-color: #6e73ab;">
+    <hr class="target_header">
 
     <div class="project_home_section">
         <div class="project_home_project_description_div">
@@ -22,7 +24,7 @@
 
     </div>
 
-    <hr style="width: 90%; background-color: #6e73ab;">
+    <hr class="target_header">
 
     <div class="project_home_section">
         <div class="project_home_project_description_div">
@@ -34,7 +36,7 @@
 
     </div>
 
-    <hr style="width: 90%; background-color: #6e73ab;">
+    <hr class="target_header">
 
 
 
